--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rauljariasz.github.io/qr-code-component/",
   "name": "qr-code-component-main",
   "version": "1.0.0",
   "description": "",
